[tool.poetry]
name = "ollama-deep-researcher"
version = "0.1.0"
description = ""
authors = ["Guessous Mohamed Amine <guessous.amine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-community = "^0.3.16"
langchain-ollama = "^0.2.3"
langgraph = "^0.2.69"
tavily-python = "^0.5.0"
poetry = "^2.0.1"
langgraph-cli = {extras = ["inmem"], version = "^0.1.70"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
